--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 ul>li>img{
+    
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -12,6 +13,9 @@ ul>li>img{
     border: 2px solid white;
 }
 
+.fav-meals li, .fav-meals li .clear{
+display: inline-block
+}
 .fav-meals>li>span{
     font-size: 0.9rem;
     display: inline-block;
@@ -38,6 +42,7 @@ align-items: center;
 justify-content: center;
 min-height: 100vh;
 margin: 0;
+
 }
 
 .fav-meals{
@@ -72,6 +77,7 @@ font-size: 1.2rem;
     object-fit: cover;
     width:100%;
     height: 14rem;
+    cursor: pointer;
 }
 
 .mobile-container{
@@ -124,7 +130,7 @@ background-color: #ecc8e8;
 border-radius: 3px;
 box-shadow:0 0 10px 2px #3333331A ;
 overflow: hidden;
-cursor: pointer;
+
 }
 
 .meal-header{
@@ -157,6 +163,7 @@ padding: 1rem;
     font-size: 1.2rem;
     color: rgb(197,188,188);
     cursor:pointer;
+    
 }
 
 .meal-body .fav-btn.active{
@@ -179,6 +186,8 @@ padding: 1rem;
 .popup-container.hidden{
     opacity: 0;
     pointer-events: none;
+    
+    
 
 }
 .popup{
